app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-app
  labels:
    app: delivery-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-app
  template:
    metadata:
      labels:
        app: delivery-app
    spec:
      containers:
        - name: delivery-app
          image: ritatrcr/delivery-app:1.0.1
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
