app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /delivery-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: delivery-app
            port:
              number: 3000
